temp fix for monster size on mobile

--- a/stylesheets/landing.css
+++ b/stylesheets/landing.css
@@ -207,11 +207,9 @@ a.cta:hover {
 @keyframes fadeInAnimation {
     0% {
         opacity: 0;
-        -webkit-transform: scaleX(0.5) scaleY(0.5);
     }
     100% {
         opacity: 1;
-        -webkit-transform: scaleX(1) scaleY(1);
      }
 }
 
